--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.scraper.Main</mainClass>
+                            <mainClass>org.scraper.runner.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
